--- a/less/nav.less
+++ b/less/nav.less
@@ -81,6 +81,7 @@ nav {
                 border: 1px solid black;
                 padding: 3rem;
                 background-color: @logo-blue;
+                z-index: 10;
                 
                 a {
                     color: white;
